Regression: Texture UV Mapping incorrect on meshes with Subsuf and Mirror modifiers #44530

Closed
opened 2015-04-28 03:38:20 +02:00 by Zauber Paracelsus · 28 comments

System Information
64bit Manjaro Linux, kernel 3.19
GeForce GTX 650 Ti Boost, driver 346.59

Blender Version
Broken: 2.75 dev, hash 4288ab1
Worked: 2.74 hash 000dfc0

Short description of error
A regression has occured on UV textured objects that use the Subsurf and Mirror modifier, though it may just be the mirror modifier that is relevant. What happens is that the UVs do not seem to map correctly to the dividing line of the mirror modifier, seemingly stretching more than they should.

This render shows the correct mapping, under the 2.74 release version:
TextureUVs_Correct.png

This one is rendered under the current master, 4288ab1 :
TextureUVs_Broken.png

Exact steps for others to reproduce the error
Based on a (as simple as possible) attached .blend file with minimum amount of steps

  1. Download and open this file, under the 2.74 release: PaintingIssue.blend
  2. Render, and note that down the middle of the mesh, the texture applies correctly.
  3. Close blender, and reopen the file under a post-2.74 development build.
  4. Render, and note that the results are completely different, and wrong.
**System Information** 64bit Manjaro Linux, kernel 3.19 GeForce GTX 650 Ti Boost, driver 346.59 **Blender Version** Broken: 2.75 dev, hash 4288ab1 Worked: 2.74 hash 000dfc0 **Short description of error** A regression has occured on UV textured objects that use the Subsurf and Mirror modifier, though it may just be the mirror modifier that is relevant. What happens is that the UVs do not seem to map correctly to the dividing line of the mirror modifier, seemingly stretching more than they should. This render shows the correct mapping, under the 2.74 release version: ![TextureUVs_Correct.png](https://archive.blender.org/developer/F167417/TextureUVs_Correct.png) This one is rendered under the current master, 4288ab1 : ![TextureUVs_Broken.png](https://archive.blender.org/developer/F167419/TextureUVs_Broken.png) **Exact steps for others to reproduce the error** Based on a (as simple as possible) attached .blend file with minimum amount of steps 1) Download and open this file, under the 2.74 release: [PaintingIssue.blend](https://archive.blender.org/developer/F167421/PaintingIssue.blend) 2) Render, and note that down the middle of the mesh, the texture applies correctly. 3) Close blender, and reopen the file under a post-2.74 development build. 4) Render, and note that the results are completely different, and wrong.

Changed status to: 'Open'

Changed status to: 'Open'

Added subscriber: @ZauberParacelsus

Added subscriber: @ZauberParacelsus
Antonis Ryakiotakis was assigned by Sergey Sharybin 2015-04-28 10:11:27 +02:00

Added subscribers: @Psy-Fi, @Sergey

Added subscribers: @Psy-Fi, @Sergey

@Psy-Fi, it is caused by 5197aa0, mind having a look? :)

@Psy-Fi, it is caused by 5197aa0, mind having a look? :)

This issue was referenced by d920b8e075

This issue was referenced by d920b8e075ed949bd21297bb3baa4a8cb22428c9

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit d920b8e075.

Closed by commit d920b8e075.

This issue was referenced by ac0fdd379ae37da8acb2c75c69f82878ff992466

This issue was referenced by ac0fdd379ae37da8acb2c75c69f82878ff992466

Added subscriber: @sindra1961

Added subscriber: @sindra1961

@Psy-Fi:
I think that a correction is insufficient.
{F168854}{F168856}{F168858}screen4.png
untitled.blend

It is not displayed definitely when I turn off merge option of attached PaintingIssue.blend.
{F168863}screen6.png

version 2.74 (sub 5), branch b'master', commit date b'2015-05-01' b'00:44', hash b'94d80c8', b'Release'

@Psy-Fi: I think that a correction is insufficient. {[F168854](https://archive.blender.org/developer/F168854/screen1.png)}{[F168856](https://archive.blender.org/developer/F168856/screen2.png)}{[F168858](https://archive.blender.org/developer/F168858/screen3.png)}![screen4.png](https://archive.blender.org/developer/F168860/screen4.png) [untitled.blend](https://archive.blender.org/developer/F168862/untitled.blend) It is not displayed definitely when I turn off merge option of attached PaintingIssue.blend. {[F168863](https://archive.blender.org/developer/F168863/screen5.png)}![screen6.png](https://archive.blender.org/developer/F168865/screen6.png) version 2.74 (sub 5), branch b'master', commit date b'2015-05-01' b'00:44', hash b'94d80c8', b'Release'

May subdivision surface modifier not receive a result of mirror modifier definitely?

May subdivision surface modifier not receive a result of mirror modifier definitely?

It seems to be handled definitely in 2.49b.
249bscreen.jpg
249buntitled.blend

It seems to be handled definitely in 2.49b. ![249bscreen.jpg](https://archive.blender.org/developer/F168869/249bscreen.jpg) [249buntitled.blend](https://archive.blender.org/developer/F168871/249buntitled.blend)

It is displayed definitely when I validate UV mirror.
untitled1.png
untitled2.png
untitled3.png
untitled.blend

It is displayed definitely when I validate UV mirror. ![untitled1.png](https://archive.blender.org/developer/F168889/untitled1.png) ![untitled2.png](https://archive.blender.org/developer/F168891/untitled2.png) ![untitled3.png](https://archive.blender.org/developer/F168893/untitled3.png) [untitled.blend](https://archive.blender.org/developer/F168895/untitled.blend)

2.49 is quite old with a different architecture and I have quite some difficulty understanding...Japanese if I'm not mistaken? From what I've tested 2.66 works the same as current master so I will leave it as is.

2.49 is quite old with a different architecture and I have quite some difficulty understanding...Japanese if I'm not mistaken? From what I've tested 2.66 works the same as current master so I will leave it as is.

I find it very difficult to understand why nationality comes out to your answer.

I mapped texture onto plane in this way.
I set modifier in order of mirror,subdivision surface.

screen.png
This invalidates subdivision surface.
I set textures option of mirror modifier for invalidity.
screen1.png
This invalidates subdivision surface.
I set textures option of mirror modifier effectively.
screen2.png

The area of eight colors is displayed.

This validates subdivision surface.
I set textures option of mirror modifier effectively.
screen3.png
This validates subdivision surface.
I set textures option of mirror modifier for invalidity.
Only in this case the area of the color is six.
screen4.png

I find it very difficult to understand why nationality comes out to your answer. I mapped texture onto plane in this way. I set modifier in order of mirror,subdivision surface. ![screen.png](https://archive.blender.org/developer/F169140/screen.png) This invalidates subdivision surface. I set textures option of mirror modifier for invalidity. ![screen1.png](https://archive.blender.org/developer/F169143/screen1.png) This invalidates subdivision surface. I set textures option of mirror modifier effectively. ![screen2.png](https://archive.blender.org/developer/F169145/screen2.png) The area of eight colors is displayed. This validates subdivision surface. I set textures option of mirror modifier effectively. ![screen3.png](https://archive.blender.org/developer/F169147/screen3.png) This validates subdivision surface. I set textures option of mirror modifier for invalidity. Only in this case the area of the color is six. ![screen4.png](https://archive.blender.org/developer/F169149/screen4.png)

@Psy-Fi:
Just to be sure, there is no this problem for your correction.
I thought that you might be settled because it was a phenomenon like reported contents.

@Psy-Fi: Just to be sure, there is no this problem for your correction. I thought that you might be settled because it was a phenomenon like reported contents.

I think that this problem was left all the time because I confirm even 2.63.

I think that this problem was left all the time because I confirm even 2.63.

Hi, don't take it the wrong way, I have nothing with Japanese people at all, it's just that the screenshot you posted of 2.49 is taken with a Japanese locale set and I can't understand the buttons any more.

I just still don't understand what the problem is...Is there some sort of combination of options that should work diffrently, and why?

Hi, don't take it the wrong way, I have nothing with Japanese people at all, it's just that the screenshot you posted of 2.49 is taken with a Japanese locale set and I can't understand the buttons any more. I just still don't understand what the problem is...Is there some sort of combination of options that should work diffrently, and why?

Aaaah! OK, I see what you mean now...not sure if that counts as a bug, but I'll take a look.

Aaaah! OK, I see what you mean now...not sure if that counts as a bug, but I'll take a look.

I am doing some tests and it seems like @sindra1961 is actually correct.

We might actually have had a bad behaviour in master since long ago. The funny thing is that the first fix made things better, while the second fix, the one for this report made things distorted again for sindra's case.

I think the "bug" in this report is only a "does not work as before" case, while the real bug, which is havind distorted maps has been going on for so long unnoticed.

And now I'm totally confused on how we should treat this because we have compatibility concerns all over. People have been using this modifier like that for so long that we will break things if we enforce another behaviour. Probably this is one of the rare occasions that calls for an option, but I'll have to consult with other developers for that.

I am doing some tests and it seems like @sindra1961 is actually correct. We might actually have had a bad behaviour in master since long ago. The funny thing is that the first fix made things better, while the second fix, the one for this report made things distorted again for sindra's case. I think the "bug" in this report is only a "does not work as before" case, while the real bug, which is havind distorted maps has been going on for so long unnoticed. And now I'm totally confused on how we should treat this because we have compatibility concerns all over. People have been using this modifier like that for so long that we will break things if we enforce another behaviour. Probably this is one of the rare occasions that calls for an option, but I'll have to consult with other developers for that.

@Psy-Fi:
I should apologize to you first.
I am sorry, @psy-fi.
When I translated your answer into Japanese with a translation tool, I did not understand a meaning.
I only misunderstood it.

@Psy-Fi: I should apologize to you first. I am sorry, @psy-fi. When I translated your answer into Japanese with a translation tool, I did not understand a meaning. I only misunderstood it.

No worries, my written answer was a bit ambiguous too I should have clarified I meant the screenshot from the start.

No worries, my written answer was a bit ambiguous too I should have clarified I meant the screenshot from the start.

Added subscriber: @ideasman42

Added subscriber: @ideasman42

So, after discussion with @ideasman42 we decided that @sindra1961 is right here.

If it causes many cases like that we may add a compatibility option but since the "Issue" is limited to very specific cases
(mirror + subsurf + hand painted textures + low res models) we will try not using a compatibility option first.

So, after discussion with @ideasman42 we decided that @sindra1961 is right here. If it causes many cases like that we may add a compatibility option but since the "Issue" is limited to very specific cases (mirror + subsurf + hand painted textures + low res models) we will try not using a compatibility option first.

@Psy-Fi:
I confirmed that a problem was improved.

However, a different problem seems to be left.
I think that Merge Limit of mirror modifier does not work definitely.
2.74 .blend
untitled.blend
2.49b .blend
(I saved it after I returned the setting of the language to English.)
249buntitled.blend

Operation image of 2.49b
I reverse modifier stack.
[Merge Limit = 0.0]249b001.jpg
[Merge Limit = 0.2]249b002.jpg
[Merge Limit = 0.6]249b003.jpg
[Merge Limit = 0.9]249b004.jpg
[Merge Limit = 1.0]249b005.jpg

Some transformation is not carried out in the revised version.

Operation image of revised version.
{F171016}untitled2.png
UV does not seem to be right. I see it in the same way in 2.49b.{F171018}untitled4.png

The version that I confirmed.
version 2.74 (sub 5), branch b'master', commit date b'2015-05-07' b'00:12', hash b'165598e', b'Release'

@Psy-Fi: I confirmed that a problem was improved. However, a different problem seems to be left. I think that Merge Limit of mirror modifier does not work definitely. 2.74 .blend [untitled.blend](https://archive.blender.org/developer/F171002/untitled.blend) 2.49b .blend (I saved it after I returned the setting of the language to English.) [249buntitled.blend](https://archive.blender.org/developer/F171003/249buntitled.blend) Operation image of 2.49b I reverse modifier stack. [Merge Limit = 0.0]![249b001.jpg](https://archive.blender.org/developer/F171004/249b001.jpg) [Merge Limit = 0.2]![249b002.jpg](https://archive.blender.org/developer/F171006/249b002.jpg) [Merge Limit = 0.6]![249b003.jpg](https://archive.blender.org/developer/F171008/249b003.jpg) [Merge Limit = 0.9]![249b004.jpg](https://archive.blender.org/developer/F171010/249b004.jpg) [Merge Limit = 1.0]![249b005.jpg](https://archive.blender.org/developer/F171012/249b005.jpg) Some transformation is not carried out in the revised version. Operation image of revised version. {[F171016](https://archive.blender.org/developer/F171016/Untitled.png)}![untitled2.png](https://archive.blender.org/developer/F171014/untitled2.png) UV does not seem to be right. I see it in the same way in 2.49b.{[F171018](https://archive.blender.org/developer/F171018/untitled3.png)}![untitled4.png](https://archive.blender.org/developer/F171020/untitled4.png) The version that I confirmed. version 2.74 (sub 5), branch b'master', commit date b'2015-05-07' b'00:12', hash b'165598e', b'Release'

@sindra1961 looks like a diffrent issue, can you make another report? Fix commits will end up referring to the same task which will get very confusing if we keep fixing things here.

@sindra1961 looks like a diffrent issue, can you make another report? Fix commits will end up referring to the same task which will get very confusing if we keep fixing things here.

Actually no need, looks like this is not an issue, see manual:

http://www.blender.org/manual/modifiers/generate/mirror.html

It's correctly beeing mentioned as distance between vertices (used to be distance between vertex and clip plane in 2.4)

http://wiki.blender.org/index.php/Doc:2.4/Manual/Modifiers/Generate/Mirror

Actually no need, looks like this is not an issue, see manual: http://www.blender.org/manual/modifiers/generate/mirror.html It's correctly beeing mentioned as distance between vertices (used to be distance between vertex and clip plane in 2.4) http://wiki.blender.org/index.php/Doc:2.4/Manual/Modifiers/Generate/Mirror

@Psy-Fi:
I see.
Because I think that the cause of this problem is mirror modifier, I make a different report.
Thank you.

@Psy-Fi: I see. Because I think that the cause of this problem is mirror modifier, I make a different report. Thank you.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#44530
No description provided.