Fix T44530 UV islands fail on subsurf after mirror modifier.

Caused by own commit that changed island detection code. In the case of
modifiers we don't want to take winding information into account, but
left the code since there are use cases (like painting) which could use
this.